<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:maxHeight="280dp"
        android:id="@+id/layout_item">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

        <ImageView
                android:id="@+id/listPosterImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/app_icon"
                android:paddingLeft="16dp"/>

        <TextView
                android:id="@+id/listTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/title"
                android:layout_below="@id/listPosterImageView"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/listYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_below="@+id/listTitleTextView"
                android:text="@string/year"/>

        <TextView
                android:id="@+id/listTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listYearTextView"
                android:text="@string/type"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>